--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
           <div class="screen-content">223</div>
         </div>
         <div class="buttons-container">
-          <button id="1" class="calculator-button">1</button>
-          <button id="2" class="calculator-button">2</button>
-          <button id="3" class="calculator-button">3</button>
+          <button id="1" class="calculator-button number-button">1</button>
+          <button id="2" class="calculator-button number-button">2</button>
+          <button id="3" class="calculator-button number-button">3</button>
           <button id="+" class="calculator-button operation-button">+</button>
-          <button id="4" class="calculator-button">4</button>
-          <button id="5" class="calculator-button">5</button>
-          <button id="6" class="calculator-button">6</button>
+          <button id="4" class="calculator-button number-button">4</button>
+          <button id="5" class="calculator-button number-button">5</button>
+          <button id="6" class="calculator-button number-button">6</button>
           <button id="-" class="calculator-button operation-button">-</button>
-          <button id="7" class="calculator-button">7</button>
-          <button id="8" class="calculator-button">8</button>
-          <button id="9" class="calculator-button">9</button>
+          <button id="7" class="calculator-button number-button">7</button>
+          <button id="8" class="calculator-button number-button">8</button>
+          <button id="9" class="calculator-button number-button">9</button>
           <button id="*" class="calculator-button operation-button">*</button>
-          <button id="C" class="calculator-button">C</button>
-          <button id="0" class="calculator-button">0</button>
+          <button id="C" class="calculator-button number-button">C</button>
+          <button id="0" class="calculator-button number-button">0</button>
           <button id="=" class="calculator-button operation-button">=</button>
-          <button id="/" class="calculator-button">/</button>
+          <button id="/" class="calculator-button number-button">/</button>
         </div>
       </div>
     </div>
