Add functionality that calculator works in console for one round of loading, does not work for addition

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <button id="*" class="calculator-button operation-button">*</button>
           <button id="C" class="calculator-button number-button">C</button>
           <button id="0" class="calculator-button number-button">0</button>
-          <button id="=" class="calculator-button operation-button">=</button>
-          <button id="/" class="calculator-button number-button">/</button>
+          <button id="=" class="calculator-button">=</button>
+          <button id="/" class="calculator-button operation-button">/</button>
         </div>
       </div>
     </div>
