Add cancel button and refactored button numbers

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <button id="8" class="calculator-button number-button">8</button>
           <button id="9" class="calculator-button number-button">9</button>
           <button id="*" class="calculator-button operation-button">*</button>
-          <button id="C" class="calculator-button number-button">C</button>
+          <button id="C" class="calculator-button">C</button>
           <button id="0" class="calculator-button number-button">0</button>
           <button id="=" class="calculator-button">=</button>
           <button id="/" class="calculator-button operation-button">/</button>
