--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="wrapper">
       <div class="calculator">
         <div class="screen">
-          <div class="screen-content">223</div>
+          <div class="first-num-placeholder"></div>
+          <div class="screen-content"></div>
         </div>
         <div class="buttons-container">
           <button id="1" class="calculator-button number-button">1</button>
